Added atomic operations

--- a/templates/programari.html
+++ b/templates/programari.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Readex+Pro" rel="stylesheet">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'IJR/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
 
     <script>
